<resources>
    <string name="app_name">颜值</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="menu_go_to_preview">Go to preview</string>
    <string name="card_menu_actionbar_color_preview">Use as actionbar color preview</string>
    <string name="card_menu_color_preview">Use as color preview</string>
    <string name="card_menu_remove_actionbar_color_preview">Do not use as actionbar color preview</string>
    <string name="card_menu_remove_color_preview">Do not use as color preview</string>
    <string name="card_menu_copy_color">Copy color to clipboard</string>
    <string name="color_copied">Color %s copied to clipboard</string>
    <string name="color_clipboard">Color %1$s %2$s</string>
    <string-array name="color_sections_names">
        <item>@string/red</item>
        <item>@string/pink</item>
        <item>@string/purple</item>
        <item>@string/deep_purple</item>
        <item>@string/indigo</item>
        <item>@string/blue</item>
        <item>@string/light_blue</item>
        <item>@string/cyan</item>
        <item>@string/teal</item>
        <item>@string/green</item>
        <item>@string/light_green</item>
        <item>@string/lime</item>
        <item>@string/yellow</item>
        <item>@string/amber</item>
        <item>@string/orange</item>
        <item>@string/deep_orange</item>
        <item>@string/brown</item>
        <item>@string/grey</item>
        <item>@string/blue_grey</item>
    </string-array>
    <string name="red">Red</string>
    <string name="pink">Pink</string>
    <string name="purple">Purple</string>
    <string name="deep_purple">Dp. purple</string>
    <string name="indigo">Indigo</string>
    <string name="blue">Blue</string>
    <string name="light_blue">L. blue</string>
    <string name="cyan">Cyan</string>
    <string name="teal">Teal</string>
    <string name="green">Green</string>
    <string name="light_green">L. green</string>
    <string name="lime">Lime</string>
    <string name="yellow">Yellow</string>
    <string name="amber">Amber</string>
    <string name="orange">Orange</string>
    <string name="deep_orange">Dp. orange</string>
    <string name="brown">Brown</string>
    <string name="grey">Grey</string>
    <string name="blue_grey">Blue grey</string>
    <string-array name="full_base_color_list">
        <item>500</item>
        <item>50</item>
        <item>100</item>
        <item>200</item>
        <item>300</item>
        <item>400</item>
        <item>600</item>
        <item>700</item>
        <item>800</item>
        <item>900</item>
        <item>A100</item>
        <item>A200</item>
        <item>A400</item>
        <item>A700</item>
    </string-array>
    <string-array name="base_color_list_to_900">
        <item>500</item>
        <item>50</item>
        <item>100</item>
        <item>200</item>
        <item>300</item>
        <item>400</item>
        <item>600</item>
        <item>700</item>
        <item>800</item>
        <item>900</item>
    </string-array>
    <string-array name="base_color_list_greys">
        <item>500</item>
        <item>50</item>
        <item>100</item>
        <item>200</item>
        <item>300</item>
        <item>400</item>
        <item>600</item>
        <item>700</item>
        <item>800</item>
        <item>900</item>
        <item>1000</item>
        <item>1000</item>
    </string-array>
    <string name="text_lvl">Lvl</string>
    <string name="button_redraw">REDRAW</string>
    <string name="button_half">HALF</string>
    <string name="newrecord">That\'s a new record!</string>
    <string name="almost">Almost</string>
    <string name="youcandobetterthanthat">You can do better than that!</string>
    <string name="game_help">Tap the lighter color FAST!</string>
    <string name="game_over">游戏结束</string>
    <string name="retry_game">Replay</string>
    <string name="preference_file_key">com.example.prakharsriv.colorphun.PREFERENCES_FILE</string>
    <string name="points_text">Points</string>
    <string name="level_text">Level</string>
    <string name="high_score">New High Score!</string>
    <string name="best_label">Best</string>
    <string name="answer01">所有人都能看到12</string>
    <string name="answer02">普通人看到8\n红绿色弱看到3\n全色弱什么都看不到</string>
    <string name="answer03">普通人看到29\n红绿色弱看到70\n全色弱什么都看不到</string>
    <string name="answer04">普通人看到5\n红绿色弱看到2\n全色弱什么都看不到</string>
    <string name="answer05">普通人看到3\n红绿色弱看到5\n全色弱什么都看不到</string>
    <string name="answer06">普通人看到15\n红绿色弱看到17\n全色弱什么都看不到</string>
    <string name="answer07">普通人看到74\n红绿色弱看到21\n全色弱什么都看不到</string>
    <string name="answer08">普通人看到6\n大多数色弱患者看不清数字</string>
    <string name="answer09">普通人看到45\n大多数色弱患者看不清数字</string>
    <string name="answer10">普通人看到5\n大多数色弱患者看不清数字</string>
    <string name="answer11">普通人看到7\n大多数色弱患者看不清数字</string>
    <string name="answer12">普通人看到16\n大多数色弱患者看不清数字</string>
    <string name="answer13">普通人看到73\n大多数色弱患者看不清数字</string>
    <string name="answer14">普通人看不到数字\n红绿色弱看到5\n全色弱看不到数字</string>
    <string name="answer15">普通人看不到数字\n红绿色弱看到45\n全色弱看不到数字</string>
    <string name="answer16">普通人看到26\n红色弱看到6，红色弱可能看到模糊的2\n绿色弱看到2，绿色弱可能看到6</string>
    <string name="answer17">普通人看到42\n红色弱看到2，轻度红色弱可能看到模糊的4\n绿色弱看到4，轻度绿色弱可能看到模糊的2</string>
    <string name="answer18">普通人能看到紫色和红色的线条\n红色弱看到紫色线（轻度可能看到红色）\n绿色弱看到红色线（轻度可能看到紫色线）</string>
    <string name="answer19">普通人和全色弱看不到明显的线条\n红绿色弱患者能看到波浪形线条（视程度而定）</string>
    <string name="answer20">普通人能看到一条扭曲的绿色线条\n大多数色弱患者不能准确识别线条的存在</string>
    <string name="answer21">普通人能看到一条扭曲的橙色线条\n大多数色弱患者不能准确识别线条的存在</string>
    <string name="answer22">普通人能看到蓝绿色/黄绿色的线条\n红绿色弱会看到蓝绿色和红色线条\n全色弱看不到任何线条</string>
    <string name="answer23">普通人能看到红色和橙色线条\n红绿色弱会看到红色和蓝绿色线条\n全色弱什么都看不到</string>
    <string name="answer24">所有人都能看到一条弯曲的线条</string>
    <string name="choose_color">选择颜色</string>
    <string name="cancel">取消</string>
    <string name="sure">确定</string>
    <string name="no_palette_color">还没有保存过颜色到色板哦</string>
    <string name="add_color_ok">已添加颜色到色板中</string>
    <string name="color_palette">色板</string>
    <string name="palette">色板</string>
    <string name="about">关于</string>
    <string name="album">相册</string>
    <string name="choose_photo">选择图片</string>
    <string name="load_photo_failed">加载图片失败</string>
    <string name="pick_photo">点击右上角菜单前往选择图片吧~</string>
    <string name="alpha_title">透明度</string>
    <string name="hex_title">16进制值</string>
    <string name="cal_alpha">
        颜色透明度计算:\n
        栗子：UI给出的颜色是#FFFFFF，透明度为20%，求结果。\n
        换算过程：\n
        1、将透明度转换成不透明度。不透明度=80%\n
        2、不透明度乘以255=204\n
        3、将计算结果转换成16进制(204/16商12余12,12(10)=C(16))，得到最终的不透明度=CC\n
        4、将不透明度和颜色值拼接成ARGB格式，得到最终的颜色值= #CCFFFFFF\n\n
        透明度对应的16进制值表：
    </string>
    <string name="calc_argb_detail" formatted="false">
        ARGB值计算:\n
            说明:\n
            6位（如:#000000）就是RGB值\n
            8位（如:#1e000000）ARGB 头两位是透明度，00是完全透明，FF是完全不透明，后6位是RGB值，每两位分别属于R、G、B部分\n\n
            (栗子1):给出的颜色的16进制值是EAEAEA，求A、R、G、B。\n
            计算过程:\n
            #ECEFF1相当于#FFECEFF1\n
            (A)=FF(16)=(15x16+15)(10)=255(10)\n
            (R)=EC(16)=(14x16+12)(10)=236(10)\n
            (G)=EF(16)=(14x16+15)(10)=239(10)\n
            (B)=F1(16)=(15x16+1)(10)=241(10)\n\n

            (栗子2):给出的颜色的A、R、G、B的十进制值为123、233、245、250，求该颜色的16进制值。\n
            计算过程:\n
            十进制转为K进制使用除K取余法，这里的K=16\n
            (A)\n
            123÷16=7\t\t余11->B\n
            7÷16=0\t\t余7\n
            ->A=7B\n
            (R)\n
            233÷16=14\t\t余9\n
            14÷16=0\t\t余14->E\n
            ->R=E9\n
            (G)\n
            245÷16=15\t\t余5\n
            15÷16=0\t\t余15->F\n
            ->G=F5\n
            (B)\n
            250÷16=15\t\t余10->A\n
            15÷16=0\t\t余15->F\n
            ->B=FA\n
            该颜色的16进制值 = 7BE9F5FA
    </string>
    <string name="md_colors">Material Design配色</string>
    <string name="harmonize_colors">配色</string>
    <string name="pick_photo_color">图片取色</string>
    <string name="pick_palette_color">色板取色</string>
    <string name="pick_screen_color">屏幕取色</string>
    <string name="pick_argb_color">argb取色</string>
    <string name="pick_color">取色</string>
    <string name="game_color_diff">色差找找看</string>
    <string name="game_color_light">哪个颜色浅</string>
    <string name="games">小游戏</string>
    <string name="transparency">透明度</string>
    <string name="cal_argb" formatted="false">颜色值&#038;ARGB</string>
    <string name="calculate">计算</string>
    <string name="vision_test">色觉测试</string>
    <string name="other">其它</string>
    <string name="gameMode">游戏模式</string>
    <string name="mode_classic">经典模式</string>
    <string name="mode_ten_times">十次计时</string>
    <string name="mode_easy">简单模式</string>
    <string name="mode_hard">复杂模式</string>
    <string name="game_diff_classic_best">最佳闯关数：%d</string>
    <string name="start_game">开始游戏</string>
    <string name="game_diff_classic_compare">与上次相比,闯关数：%s</string>
    <string name="equal">相等</string>
    <string name="game_diff_time_best">最短耗时：%d</string>
    <string name="game_diff_time_compare">与上次相比,耗时(毫秒)：%s</string>
    <string name="game_lt_best">最佳得分：%d</string>
    <string name="game_lt_compare">与上次相比,得分：%s</string>
    <string name="color_collections">采色板</string>
</resources>