<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/white_bg"
              android:orientation="vertical"
              android:paddingBottom="20dp"
              android:paddingLeft="80dp"
              android:paddingRight="80dp"
              android:paddingTop="20dp">

    <TextView
        android:id="@+id/game_over"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/game_over"
        android:textColor="@color/blue_gray"
        android:textSize="40sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:background="@android:color/darker_gray"/>

    <TextView
        android:id="@+id/tvLevelIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="Level 1"
        android:textColor="@color/dark_gray"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/tvPointsBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@color/blue_gray"
        android:padding="10dp"
        android:text="124"
        android:textColor="@color/yellow"
        android:textSize="36sp"/>

    <TextView
        android:id="@+id/tvHighScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/high_score"
        android:textColor="@color/red"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@drawable/border"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/tvBestLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/best_label"
            android:textColor="@color/blue_gray"/>

        <TextView
            android:id="@+id/tvBestBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="176"
            android:textColor="@color/red"
            android:textSize="36sp"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:background="@android:color/darker_gray"/>

    <Button
        android:id="@+id/btnReplay"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/replay_button"
        android:text="@string/retry_game"
        android:textSize="15sp"/>

</LinearLayout>
